syntax = "proto3";

package instances.v1;

import "instances/v1/provision.proto";
import "tagger/tagger.proto";
import "validate/validate.proto";

message GetInfoRequest {
  string org_id = 1 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];
  string app_id = 2 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];
  string component_id = 3 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];
  string deployment_id = 4 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];
  string install_id = 5 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];
}

// GetInfoResponse returns infrastructure information about the instance
message GetInfoResponse {
  string id = 1 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];
  instances.v1.ProvisionResponse response = 2;
}
